--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,21 @@
 # Golang
 golang/bin
 golang/pkg
-golang/src/.vscode/
-golang/src/.idea/
 *go.mod
 *go.sum
 *vendor/
 golang/src/github.com/
 golang/src/gopkg.in/
+
+# Config
 .DS_Store
 *.idea
 *db/
 *.vscode
 
+# Docker
 docker-workspace/data
 docker-workspace/log
+
+# Python
+python/qxd
