--- a/docker-workspace/config/nginx/conf.d/example.conf
+++ b/docker-workspace/config/nginx/conf.d/example.conf
@@ -4,7 +4,7 @@ server {
     # 绑定主机名 [example.com]。
     server_name community.xqd.com;
     # 服务器站点根目录 [/example.com/public]。
-    root /var/www/html/xqd/community/public;
+    root /var/www/html/xqd_community_service/public;
 
     # 添加几条有关安全的响应头；与 Google+ 的配置类似，详情参见文末。
     add_header X-Frame-Options "SAMEORIGIN";
@@ -76,6 +76,47 @@ server {
     #     include       fastcgi.conf;
     #     fastcgi_pass  php:9000;
     # }
+
+    access_log /var/log/nginx/nginx.example.access.log  main;
+    error_log  /var/log/nginx/nginx.example.error.log  error;
+}
+
+server {
+    listen 80;
+    server_name  albumsimba.com;
+    root /var/www/html/album/web;
+    index index.html index.php index.htm;
+
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+        if (!-e $request_filename) {
+           rewrite ^/backend(.*)$ /backend/index.php?s=$1 last;
+           rewrite ^/wechat(.*)$ /wechat/index.php?s=$1 last;
+           rewrite ^/api(.*)$ /api/index.php?s=$1 last;
+           rewrite ^/oauth2(.*)$ /oauth2/index.php?s=$1 last;
+           rewrite ^/(.*)$ /index.php?s=$1 last;
+           break;
+        }
+
+    }
+
+    location ~ \.php$ {
+        include       fastcgi.conf;
+        # 配置 FastCGI 服务地址，可以为 IP:端口，也可以为 Unix socket。
+        fastcgi_pass php:9000;
+        # 配置 FastCGI 的主页为 index.php。
+        fastcgi_index index.php;
+        # 配置 FastCGI 参数 SCRIPT_FILENAME 为 $realpath_root$fastcgi_script_name。
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        # 引用更多默认的 FastCGI 参数。
+        include fastcgi_params;
+    }
+
+     location ~ /\.ht {
+        deny all;
+    }
+
+
 
     access_log /var/log/nginx/nginx.example.access.log  main;
     error_log  /var/log/nginx/nginx.example.error.log  error;
