--- a/docker-workspace/docker-compose.yml
+++ b/docker-workspace/docker-compose.yml
@@ -12,6 +12,8 @@ networks:
           driver: default
           config:
             - subnet: 172.23.0.0/24
+    netes:
+        external: false
 services:
     php:
         build:
@@ -114,6 +116,44 @@ services:
         environment:
             - RABBITMQ_DEFAULT_USER=${RABBITMQ_USER}
             - RABBITMQ_DEFAULT_PASS=${RABBITMQ_PASS}
+        networks:
+            frontend:
+                ipv4_address: 172.22.0.3
+    
+    elasticsearch:
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.14.0
+        container_name: elasticsearch
+        volumes: 
+            - ${ELASTIC_DATA_DIR}:/usr/share/elasticsearch/data:rw
+            - ${ELASTIC_LOG_DIR}:/user/share/elasticsearch/logs:rw
+        environment: 
+            - discovery.type=single-node
+            - http.port=9200
+            - http.cors.enabled=true
+            - http.cors.allow-origin=*
+            - http.cors.allow-headers=X-Requested-With,X-Auth-Token,Content-Type,Content-Length,Authorization
+            - http.cors.allow-credentials=false
+            - bootstrap.memory_lock=true
+            - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+            
+        ports: 
+            - "9200:9200"
+            - "9300:9300"
+        networks:
+            - netes
+
+    elastichd:
+        image: containerize/elastichd:latest
+        container_name: elastichd
+        ports:
+            - "9800:9800"
+        depends_on:
+            - "elasticsearch"
+        links:
+            - "elasticsearch:demo"
+        networks:
+            - netes
+
 
     # phpmyadmin:
     #     image: phpmyadmin/phpmyadmin:latest
