--- a/docker-workspace/config/nginx/conf.d/example.conf
+++ b/docker-workspace/config/nginx/conf.d/example.conf
@@ -82,24 +82,39 @@ server {
 }
 
 server {
+    # 监听 HTTP 协议默认的 [80] 端口。
     listen 80;
-    server_name  albumsimba.com;
-    root /var/www/html/album/web;
-    index index.html index.php index.htm;
+    # 绑定主机名 [example.com]。
+    server_name app.xqd.com;
+    # 服务器站点根目录 [/example.com/public]。
+    root /var/www/html/xqd_app_service/public;
 
+    # 添加几条有关安全的响应头；与 Google+ 的配置类似，详情参见文末。
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options "nosniff";
+
+    # 站点默认页面；可指定多个，将顺序查找。
+    # 例如，访问 http://example.com/ Nginx 将首先尝试「站点根目录/index.html」是否存在，不存在则继续尝试「站点根目录/index.htm」，以此类推...
+    index index.html index.htm index.php;
+
+    # 指定字符集为 UTF-8
+    charset utf-8;
+
+    # Laravel 默认重写规则；删除将导致 Laravel 路由失效且 Nginx 响应 404。
     location / {
         try_files $uri $uri/ /index.php?$query_string;
-        if (!-e $request_filename) {
-           rewrite ^/backend(.*)$ /backend/index.php?s=$1 last;
-           rewrite ^/wechat(.*)$ /wechat/index.php?s=$1 last;
-           rewrite ^/api(.*)$ /api/index.php?s=$1 last;
-           rewrite ^/oauth2(.*)$ /oauth2/index.php?s=$1 last;
-           rewrite ^/(.*)$ /index.php?s=$1 last;
-           break;
-        }
-
     }
 
+    # 关闭 [/favicon.ico] 和 [/robots.txt] 的访问日志。
+    # 并且即使它们不存在，也不写入错误日志。
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
+
+    # 将 [404] 错误交给 [/index.php] 处理，表示由 Laravel 渲染美观的错误页面。
+    error_page 404 /index.php;
+
+    # URI 符合正则表达式 [\.php$] 的请求将进入此段配置
     location ~ \.php$ {
         include       fastcgi.conf;
         # 配置 FastCGI 服务地址，可以为 IP:端口，也可以为 Unix socket。
@@ -111,15 +126,13 @@ server {
         # 引用更多默认的 FastCGI 参数。
         include fastcgi_params;
     }
+    # 通俗地说，以上配置将所有 URI 以 .php 结尾的请求，全部交给 PHP-FPM 处理。
 
-     location ~ /\.ht {
+    # 除符合正则表达式 [/\.(?!well-known).*] 之外的 URI，全部拒绝访问
+    # 也就是说，拒绝公开以 [.] 开头的目录，[.well-known] 除外
+    location ~ /\.(?!well-known).* {
         deny all;
     }
-
-
-
-    access_log /var/log/nginx/nginx.example.access.log  main;
-    error_log  /var/log/nginx/nginx.example.error.log  error;
 }
 
 # server {
