--- a/docker-workspace/config/php/php.ini
+++ b/docker-workspace/config/php/php.ini
@@ -938,6 +938,7 @@ default_socket_timeout = 60
 ;extension=xmlrpc
 ;extension=xsl
 ;extension=zip
+extension=redis.so
 
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
